<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fire_nav_graph"
    app:startDestination="@id/preheatGateFragment">

    <fragment
        android:id="@+id/preheatGateFragment"
        android:name="com.fire.app.ui.startup.PreheatGateFragment"
        android:label="Loading">
        <action
            android:id="@+id/action_preheatGate_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/preheatGateFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_preheatGate_to_onboarding"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/preheatGateFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_preheatGate_to_loginWebView"
            app:destination="@id/loginWebViewFragment"
            app:popUpTo="@id/preheatGateFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.fire.app.ui.auth.OnboardingFragment"
        android:label="Fire">
        <action
            android:id="@+id/action_onboarding_to_loginWebView"
            app:destination="@id/loginWebViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginWebViewFragment"
        android:name="com.fire.app.ui.auth.LoginWebViewFragment"
        android:label="@string/login_title">
        <action
            android:id="@+id/action_loginWebView_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/fire_nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fire.app.ui.home.HomeFragment"
        android:label="@string/tab_home">
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.fire.app.ui.notifications.NotificationsFragment"
        android:label="@string/tab_notifications">
        <action
            android:id="@+id/action_notifications_to_profile"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_notifications_to_history"
            app:destination="@id/notificationHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.fire.app.ui.profile.ProfileFragment"
        android:label="@string/tab_profile">
        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_profile_to_bookmarks"
            app:destination="@id/bookmarksFragment" />
        <action
            android:id="@+id/action_profile_to_drafts"
            app:destination="@id/draftsFragment" />
        <action
            android:id="@+id/action_profile_to_readHistory"
            app:destination="@id/readHistoryFragment" />
        <action
            android:id="@+id/action_profile_to_privateMessages"
            app:destination="@id/privateMessagesFragment" />
        <action
            android:id="@+id/action_profile_to_ldc"
            app:destination="@id/ldcFragment" />
        <action
            android:id="@+id/action_profile_to_cdk"
            app:destination="@id/cdkFragment" />
        <deepLink
            app:uri="fire://profile/{username}"
            app:action="android.intent.action.VIEW" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.fire.app.ui.search.SearchFragment"
        android:label="@string/search_title">
        <action
            android:id="@+id/action_searchFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.fire.app.ui.bookmarks.BookmarksFragment"
        android:label="@string/feed_bookmarks" />

    <fragment
        android:id="@+id/draftsFragment"
        android:name="com.fire.app.ui.drafts.DraftsFragment"
        android:label="@string/feed_drafts" />

    <fragment
        android:id="@+id/notificationHistoryFragment"
        android:name="com.fire.app.ui.notifications.NotificationHistoryFragment"
        android:label="@string/notifications_history_title">
        <action
            android:id="@+id/action_notificationHistory_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/readHistoryFragment"
        android:name="com.fire.app.ui.readhistory.ReadHistoryFragment"
        android:label="@string/feed_read_history" />

    <fragment
        android:id="@+id/privateMessagesFragment"
        android:name="com.fire.app.ui.privatemessages.PrivateMessagesFragment"
        android:label="@string/feed_private_messages_inbox" />

    <fragment
        android:id="@+id/ldcFragment"
        android:name="com.fire.app.ui.ldc.LDCFragment"
        android:label="@string/ldc_title" />

    <fragment
        android:id="@+id/cdkFragment"
        android:name="com.fire.app.ui.ldc.CDKFragment"
        android:label="@string/cdk_title" />

</navigation>
